[gd_scene load_steps=3 format=3 uid="uid://ckjk0njvflumr"]

[ext_resource type="Script" path="res://instances/player/Player.gd" id="1_5l781"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_alnat"]
size = Vector2(16, 16)

[node name="Player" type="CharacterBody2D"]
position = Vector2(-32, -16)
script = ExtResource("1_5l781")

[node name="Sprites" type="CanvasGroup" parent="."]

[node name="Polygon2D" type="Polygon2D" parent="Sprites"]
polygon = PackedVector2Array(0, -16, 16, -16, 16, 0, 0, 0)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(8, -16)
position_smoothing_enabled = true
position_smoothing_speed = 16.0

[node name="LeftCheck" type="RayCast2D" parent="."]
position = Vector2(0, -4)
target_position = Vector2(-8, 0)
hit_from_inside = true

[node name="RightCheck" type="RayCast2D" parent="."]
position = Vector2(16, -4)
target_position = Vector2(8, 0)
hit_from_inside = true

[node name="JumpCheck" type="RayCast2D" parent="."]
position = Vector2(8, -24)
target_position = Vector2(0, 16)

[node name="FloorCheck" type="RayCast2D" parent="."]
position = Vector2(8, -8)
target_position = Vector2(0, 16)

[node name="FallCheck" type="RayCast2D" parent="."]
position = Vector2(8, 8)
target_position = Vector2(0, 4)
hit_from_inside = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(8, -8)
shape = SubResource("RectangleShape2D_alnat")
